--- a/CrucibleEngine.vcxproj
+++ b/CrucibleEngine.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="CanvasComponent.h" />
     <ClInclude Include="Debug.h" />
     <ClInclude Include="FPS.h" />
+    <ClInclude Include="Drawable.h" />
     <ClInclude Include="ResourceManager.h" />
   </ItemGroup>
   <ItemGroup>
